[package]
name = "vst_viseme"
version = "0.1.0"
edition = "2021"
authors = ["Naca Nyan <naca.nyan@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/naca-nyan/vst-viseme"
description = "Sends viseme info to OSC"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
  "assert_process_allocs",
] }
rosc = "0.11.4"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
